--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RKode Games | SignIn Success</title>
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-    <h1>Success</h1>
-    <p>Return to the app.</p>
+    <div class="container">
+        <nav>RKode Games</nav>
+        <div class="message-container">
+            <div class="message-bg"></div>
+            <h1>Successfully Signed in</h1>
+            <p>Please return to the app.</p>
+        </div>
+    </div>
 </body>
 </html>
