--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
         <nav>RKode Games</nav>
         <div class="message-container">
             <div class="message-bg"></div>
-            <h1>Successfully Signed in</h1>
-            <p>Please return to the app.</p>
+            <div class="message-content">
+                <h1>Successfully Signed in</h1>
+                <p>Please return to the app.</p>
+                
+                <a href="casdl://auth?code=1234">Redirect..</a>
+            </div>
         </div>
     </div>
 </body>
