--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
                 <h1>Successfully Signed in</h1>
                 <p>Please return to the app.</p>
                 
-                <a href="casdl://auth?code=1234">Redirect..</a>
+                <a id="DeepLink" href="">Redirect..</a>
             </div>
         </div>
     </div>
 </body>
+<script src="./script/main.js"></script>
 </html>
