--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>RKode Games | SignIn Success</title>
     <link rel="stylesheet" href="./styles/style.css">
 </head>
-<body>
+<body onload="initiate()">
     <div class="container">
         <nav>RKode Games</nav>
         <div class="message-container">
@@ -21,13 +21,15 @@
     </div>
 </body>
 <script>
+function initiate() {
     const dl = new URLSearchParams(window.location.search).get("dl");
-
+    
     if(dl) {
+        const newUrl = window.location.origin;
+        window.history.replaceState("", "", newUrl);
         DeepLink.href = dl;
-        const newUrl = window.location.origin + window.location.pathname;
-        window.history.replaceState(null, "", newUrl);
     }
+}
 </script>
 <script src="./script/main.js"></script>
 </html>
