--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 function initiate() {
     const dl = new URLSearchParams(window.location.search).get("dl");
     
-    if(dl) {
-        const newUrl = window.location.origin;
-        window.history.replaceState("", "", newUrl);
-        DeepLink.href = dl;
-    }
-}
+//     if(dl) {
+//         const newUrl = window.location.origin;
+//         window.history.replaceState("", "", newUrl);
+//         DeepLink.href = dl;
+//     }
+// }
 </script>
 <script src="./script/main.js"></script>
 </html>
