--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 <script>
 function initiate() {
     const dl = new URLSearchParams(window.location.search).get("dl");
-    DeepLink.href = dl;
+    // DeepLink.href = dl;
     
-//     if(dl) {
-//         const newUrl = window.location.origin;
-//         window.history.replaceState("", "", newUrl);
-//         DeepLink.href = dl;
-//     }
+    if(dl) {
+        const newUrl = window.location.origin;
+        window.history.replaceState("", "", newUrl);
+        DeepLink.href = dl;
+    }
 }
 </script>
 </html>
