--- a/index.html
+++ b/index.html
@@ -8,15 +8,14 @@
 </head>
 <body>
     <div class="container">
-        <nav>RKode Games</nav>
+        <nav><img src="./Images/Logo-RKodeGames.svg" width="80px"/></nav>
         <div class="message-container">
             <div class="message-bg"></div>
             <div class="message-content">
                 <h1>Successfully Signed in</h1>
                 <p>Please return to the app.</p>
-                
-                <a id="DeepLink" href="">Redirect..</a>
             </div>
+            <a id="DeepLink" class="deeplink-btn" href="">Redirect..</a>
         </div>
     </div>
 </body>
